add_subdirectory(internal)
set(SLICE_FILES ${SLICE_FILES} PARENT_SCOPE)
set(CAPNPROTO_FILES ${CAPNPROTO_FILES} PARENT_SCOPE)

set(SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/Category.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategoryRenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ObjectProxy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryCtrl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Registry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Reply.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Result.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategorisedResult.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ReceiverBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Runtime.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scope.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeExceptions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeMetadata.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Variant.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Version.cpp
)
set(UNITY_SCOPES_LIB_SRC ${UNITY_SCOPES_LIB_SRC} ${SRC} PARENT_SCOPE)
