add_subdirectory(lttng)
add_subdirectory(zmq_middleware)
set(CAPNPROTO_FILES ${CAPNPROTO_FILES} PARENT_SCOPE)

set(SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/AbstractObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategoryRegistry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategoryRendererImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategoryImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConfigBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DynamicLoader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MiddlewareBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MiddlewareFactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MiddlewareFactoryConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWQuery.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWQueryCtrl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWRegistry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWReply.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MWScope.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ObjectProxyImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryBaseImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryCtrlImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryCtrlObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Reaper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RegistryConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RegistryObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RegistryImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ReplyImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ReplyObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ResultItemImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CategorisedResultImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RuntimeConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RuntimeImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeLoader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScopeObject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ThreadPool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UniqueID.cpp
)
set(UNITY_SCOPES_LIB_SRC ${UNITY_SCOPES_LIB_SRC} ${SRC} PARENT_SCOPE)
